[tool.poetry]
name = "pyhtnorm"
version = "2.0.0"
description = "Fast Simulation of Hyperplane-Truncated Multivatiate Normal Distributions" 
authors = ["Zolisa Bleki"]
license = "BSD-3-Clause"
readme = 'README.md'
repository = "https://github.com/zoj613/htnorm/"
keywords = [
    'statistical sampling',
    'multivariate gaussian distribution',
    'hyperplane truncated multivariate normal',
    'structured precision multivariate normal',
    'sampling distribution',
    'posterior sampling'
]
packages = [{include = "pyhtnorm/*.py"}]
include = [
    {path = "pyhtnorm/*.c", format = "sdist"},
    {path = "include", format = "sdist"},
    {path = "src/*.c", format = "sdist"},
    {path = "src/*.h", format = "sdist"},
    {path = "third_party_licenses"},
]

[tool.poetry.build]
script = "build.py"

[tool.poetry.dependencies]
python = "^3.7.0"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]
Cython = "^0.29.20"
pytest = "*"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0a9", "wheel", "setuptools", "numpy==1.18.1"]
build-backend = "poetry.core.masonry.api"
